--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-python
-pandas==2.2.3
-numpy==1.26.4
-pip==25.0.1
 matplotlib==3.10.1
-seaborn==0.12.2
-streamlit 
+pandas==2.2.3
+seaborn==0.13.2
+streamlit==1.43.0
